syntax = "proto3";
import "value.proto";

option java_multiple_files = true;
option java_package = "org.polypheny.db.protointerface.proto";
option java_outer_classname = "ProtoInterfaceProto";
option objc_class_prefix = "PI";

package polypheny.protointerface;

// Functions provided by the proto interface
service ProtoInterface {
  rpc Connect(ConnectionRequest) returns (ConnectionReply) {}
  rpc GetSupportedLanguages(LanguageRequest) returns (SupportedLanguages) {}
  rpc ExecuteUnparameterizedStatement(UnparameterizedStatement) returns (QueryResult) {}
  rpc CloseStatement(CloseStatementRequest) returns (CloseStatementResponse) {}
  rpc ExecuteParameterizedStatement(ParameterizedStatement) returns (QueryResult) {}
  rpc PrepareStatement(PreparedStatement) returns (QueryResult) {}

}

message ConnectionRequest {
  int32 major_api_version = 1;
  int32 minor_api_version = 2;
  string client_uuid = 3;
  StringMap connection_properties = 4;
}

message ConnectionReply {
  bool is_compatible = 1;
  uint32 major_api_version = 2;
  uint32 minor_api_version = 3;
}

message LanguageRequest {}

message SupportedLanguages {
  repeated string language_names = 1;
}

message StringMap {
  map<string, string> entries = 1;
}

message UnparameterizedStatement {
  string statement_language_name = 1;
  string statement = 2;
  optional StringMap properties = 3;
}

message CloseStatementRequest {
  int32 statementId = 1;
}

message CloseStatementResponse {
}

message ParameterizedStatement {
  string statement_language_name = 1;
  string statement = 2;
  map<string, Value> values = 3;
  optional StringMap properties = 4;
}

message PreparedStatement {
  string statement_language_name = 1;
  string statement = 2;
  optional StringMap properties = 3;
}

message QueryResult {
  oneof result {
    int64 row_count = 1;
    Frame frame = 2;
    NoResult no_result = 3;
  }
  int32 statementId = 4;
}

message NoResult {

}

message Frame {
  repeated string column_labels = 1;
  repeated Row rows = 2;
  int64 offset = 3;
}

message Row {
  repeated Value values = 1;
}

message ValueMap {
  map<string, Value> values = 1;
}
